[2133][Technical Debt]
- Performance - Method invokes inefficient Number constructor; use
static valueOf instead

Change-Id: I6a61975361aabd2388ce3e794828babb9384e59a
Signed-off-by: Faycal Abka <abka.faycal@gmail.com>